[gd_scene load_steps=5 format=3 uid="uid://hi8bj3dljwgf"]

[ext_resource type="Script" path="res://queezeball.gd" id="1_0w3pe"]
[ext_resource type="Texture2D" uid="uid://bmp123vbyei4l" path="res://Sprites/Queezeball2.png" id="2_w4f62"]
[ext_resource type="Texture2D" uid="uid://dbi6m2rx486v8" path="res://Sprites/Arrow.png" id="3_lqkqe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wko7b"]

[node name="Queezeball" type="Node2D" groups=["Collectable"]]
script = ExtResource("1_0w3pe")

[node name="Queezeball" type="Sprite2D" parent="."]
texture = ExtResource("2_w4f62")

[node name="GhostBallCollision" type="Area2D" parent="Queezeball"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Queezeball/GhostBallCollision"]
position = Vector2(0, 1)
scale = Vector2(12.59, 12.59)
shape = SubResource("CircleShape2D_wko7b")

[node name="center" type="Marker2D" parent="."]
position = Vector2(-75, -110)

[node name="truecenter" type="Marker2D" parent="."]

[node name="Arrow" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_lqkqe")
offset = Vector2(-20, -20)

[node name="ReverseTimer" type="Timer" parent="."]
wait_time = 1.5

[connection signal="timeout" from="ReverseTimer" to="." method="_on_reverse_timer_timeout"]
